emploi du temps

--- a/web-client/src/app/components/gestionnaire-components/saisi-seance/saisi-seance.component.html
+++ b/web-client/src/app/components/gestionnaire-components/saisi-seance/saisi-seance.component.html
@@ -42,5 +42,5 @@
 
 
 <div id="action">
-    <button md-button (click)="addSeance(hourStart.value, minStart.value, hourFinish.value, minFinish.value)" >Enregistrer</button>
+    <button md-button (click)="onClick(hourStart.value, minStart.value, hourFinish.value, minFinish.value)" >Enregistrer</button>
 </div>
