emploi du temps V2

--- a/web-client/src/app/components/gestionnaire-components/affichage-emplois-du-temps/affichage-emplois-du-temps.component.html
+++ b/web-client/src/app/components/gestionnaire-components/affichage-emplois-du-temps/affichage-emplois-du-temps.component.html
@@ -1,13 +1,13 @@
  <div class="action" *ngIf="!emploisMAJ"><!--  cela est affiché seulement si l'emplois n'est pas MAJ-->
-      <p>L'emplois du temps de ce groupe pour ce semestre n'a pas été mis à jour</p>
+   <h3>{{selectedSpec.name}} + {{selectedSection.sectionName}} + {{selectedGroupe.groupeName}}</h3>
       <button *ngIf="!editable" md-button (click)="MAJEmplois()">Mettre à jour</button>
-       <button *ngIf="editable" md-button (click)="enregistrer()">Enregistrer</button>
+       <button *ngIf="editable" md-button (click)="enregistrer()">Terminer</button>
 </div>
 <div id="container">
     <table>
         <tr>
           <th>
-          <button  id="edit" (click)="addSeance('sunday')"><md-icon svgIcon="add"></md-icon></button>
+          <button *ngIf="editable" id="edit" (click)="addSeance('sunday')"><md-icon svgIcon="add"></md-icon></button>
         </tr>
         <tr>
             <th>Dimanche</th>
@@ -28,7 +28,7 @@
     <table>
         <tr>
           <th>
-          <button  id="edit" (click)="addSeance('monday')"><md-icon svgIcon="add"></md-icon></button>
+          <button *ngIf="editable" id="edit" (click)="addSeance('monday')"><md-icon svgIcon="add"></md-icon></button>
         </tr>
         <tr>
             <th>Lundi</th>
@@ -49,7 +49,7 @@
     <table>
         <tr>
           <th>
-          <button  id="edit" (click)="addSeance('tuesday')"><md-icon svgIcon="add"></md-icon></button>
+          <button *ngIf="editable" id="edit" (click)="addSeance('tuesday')"><md-icon svgIcon="add"></md-icon></button>
         </tr>
         <tr>
             <th>Mardi</th>
@@ -70,7 +70,7 @@
     <table>
         <tr>
           <th>
-          <button  id="edit" (click)="addSeance('wednesday')"><md-icon svgIcon="add"></md-icon></button>
+          <button *ngIf="editable" id="edit" (click)="addSeance('wednesday')"><md-icon svgIcon="add"></md-icon></button>
         </tr>
         <tr>
             <th>Mercredi</th>
@@ -91,7 +91,7 @@
     <table>
         <tr>
           <th>
-          <button  id="edit" (click)="addSeance('thursday')"><md-icon svgIcon="add"></md-icon></button>
+          <button  *ngIf="editable" id="edit" (click)="addSeance('thursday')"><md-icon svgIcon="add"></md-icon></button>
         </tr>
         <tr>
             <th>Jeudi</th>
