--- a/web-client/src/app/components/gestionnaire-components/saisi-seance/saisi-seance.component.html
+++ b/web-client/src/app/components/gestionnaire-components/saisi-seance/saisi-seance.component.html
@@ -1,5 +1,5 @@
 <h3>{{day}}</h3>
-<h5>Séance 1</h5>
+<h5>Veillez saisir les informations de la seance </h5>
 <div class="saisi">
     <div>
         <md-select [(ngModel)]="selectedModule" placeholder="Module">
