--- a/web-client/src/app/components/enseignant-components/etudiants/etudiants.component.html
+++ b/web-client/src/app/components/enseignant-components/etudiants/etudiants.component.html
@@ -25,7 +25,7 @@
                         <div><button md-button *ngIf="affichage==1" (click)="openSaisieAbsencesDialog(groupe.students, groupe.spec +' '+ groupe.section+' '+ groupe.groupeName)">saisir les absences</button></div>
                     </div>
                     <liste-groupe [students]="groupe.students" *ngIf="affichage==0"></liste-groupe>
-                    <absence-groupe [students]="groupe.students" [teacher]="teacher"  *ngIf="affichage==1"></absence-groupe>
+                    <absence-groupe  [students]="groupe.students"   *ngIf="affichage==1"></absence-groupe>
                     <notes-groupe *ngIf="affichage==2"></notes-groupe>
                 </div>
             </md-tab>
