--- a/web-client/src/app/components/etudiant-components/espace-etudiant/espace-etudiant.component.html
+++ b/web-client/src/app/components/etudiant-components/espace-etudiant/espace-etudiant.component.html
@@ -5,7 +5,7 @@
             <div class="item"><h1>Easy</h1></div>
             <div class="centerContainer">
                 <div class="item"><md-icon id="user" svgIcon='person'></md-icon></div>
-                <div class="item"><h2>{{nom}} {{prenom}}</h2></div>
+                <div class="item"><h2>{{student.lastname}} {{student.name}}</h2></div>
             </div>
             <div class="item"><button>Logout</button></div>
         </div>
@@ -14,40 +14,40 @@
     <div class="manu-bar">
         <div class="espace"></div>
         <div class="menu">
-            <div [class]="classMenus[0]" (click)="selectionner(0)" [routerLink]="['/EspaceEtudiant/Profil']">
+            <div [class]="classMenus[0]" (click)="selectionner(0)" [routerLink]="['/student/profil']">
                 <div></div>
                 <md-icon class="menu-icone" svgIcon="person"></md-icon>
                 <div></div>
             </div>
-                
-            <div [class]="classMenus[1]" (click)="selectionner(1)">
+
+            <div [class]="classMenus[1]" [routerLink]="['/student/calendar']" (click)="selectionner(1)">
                 <div></div>
                 <md-icon class="menu-icone" svgIcon="school"></md-icon>
                 <div></div>
             </div>
 
-            <div [class]="classMenus[2]" (click)="selectionner(2)">
+            <div [class]="classMenus[2]" [routerLink]="['/student/absences']"(click)="selectionner(2)">
                 <div></div>
                 <md-icon class="menu-icone" svgIcon="specialite"></md-icon>
                 <div></div>
-            </div>     
+            </div>
         </div>
         <div class="espace"></div>
     </div>
 
     <div class="text-menu">
-        <div  [class]="classMenus[0]" (click)="selectionner(0)" [routerLink]="['/EspaceEtudiant/Profil']">
-            Profil     
+        <div  [class]="classMenus[0]" (click)="selectionner(0)" [routerLink]="['/student/profil']">
+            Profil
         </div>
-            
+
         <div [class]="classMenus[1]" (click)="selectionner(1)">
             Emplois de Temps
         </div>
-        
+
         <div [class]="classMenus[2]" (click)="selectionner(2)">
             Absences
         </div>
-       
+
     </div>
 </div>
 
