--- a/web-client/src/app/components/gestionnaire-components/niveaux-specialites/niveaux-specialites.component.html
+++ b/web-client/src/app/components/gestionnaire-components/niveaux-specialites/niveaux-specialites.component.html
@@ -49,3 +49,16 @@
     <button (click)="addGroupe(groupe.value)" md-button>OK</button>
 </md-menu>
 
+<div>
+  <label for="">Select an .xlsx file to get json</label>
+  <br>
+  <input type="file" (change)="handleFile($event)" />
+</div>
+
+<div class="result-container" *ngIf="result && result.length>0">
+  <h2>
+    Result :
+   <br>
+  </h2>
+  {{result}}
+</div>
