--- a/web-client/src/app/components/gestionnaire-components/espace-gestionnaire/espace-gestionnaire.component.html
+++ b/web-client/src/app/components/gestionnaire-components/espace-gestionnaire/espace-gestionnaire.component.html
@@ -5,7 +5,7 @@
                 <div class="item"><md-icon id="user" svgIcon='person'></md-icon></div>
                 <div class="item"><h2>{{user.lastname}} {{user.name}}</h2></div>
             </div>
-            <div class="item"><button>Logout</button></div>
+            <div class="item"><button [routerLink]="['/']">Logout</button></div>
         </div>
 
     <div class="manu-bar">
